--- a/custom_jenkins/Dockerfile
+++ b/custom_jenkins/Dockerfile
@@ -24,3 +24,27 @@ VOLUME /var/lib/docker
 
 # Switch back to the Jenkins user
 USER jenkins
+
+# Dockerfile helps to dockerize the whole project, Jenkinsfile ( a dockerfile) is used to build Jenkins container
+FROM python:slim
+
+ENV PYTHONDONTWRITEBYTECODE = 1 \
+    PYTHONUNBUFFERED = 1
+
+WORKDIR /app
+
+RUN apt-get update && apt-get install --no-install-recommends \
+    libgomp1 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
+COPY . .
+
+RUN pip install --no-cache-dir -e .
+
+RUN python pipeline/training_pipeline.python
+
+EXPOSE 5000
+
+CMD ["python", "application.py"]
+
